--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1198,6 +1198,23 @@ author = {G. 't~Hooft}
   pages     = {315},
   editor    = {P. Van Nieuwenhuizen and D. Z. Freedman}
 }
+ 
+@article{PhysRevD.90.072005,    
+  title = {Search for proton decay via $p \rightarrow \nu {K}^{+}$ using $260 \mathrm{kiloton} \cdot \mathrm{year}$ data of Super-Kamiokande},
+  author = {Abe, K. and Hayato, Y. and Iyogi, K. and Kameda, J. and Miura, M. and Moriyama, S. and Nakahata, M. and Nakayama, S. and Wendell, R. A. and Sekiya, H. and Shiozawa, M. and Suzuki, Y. and Takeda, A. and Takenaga, Y. and Ueno, K. and Yokozawa, T. and Kaji, H. and Kajita, T. and Kaneyuki, K. and Lee, K. P. and Okumura, K. and McLachlan, T. and Labarga, L. and Kearns, E. and Raaf, J. L. and Stone, J. L. and Sulak, L. R. and Goldhaber, M. and Bays, K. and Carminati, G. and Kropp, W. R. and Mine, S. and Renshaw, A. and Smy, M. B. and Sobel, H. W. and Ganezer, K. S. and Hill, J. and Keig, W. E. and Jang, J. S. and Kim, J. Y. and Lim, I. T. and Albert, J. B. and Scholberg, K. and Walter, C. W. and Wongjirad, T. and Ishizuka, T. and Tasaka, S. and Learned, J. G. and Matsuno, S. and Smith, S. N. and Hasegawa, T. and Ishida, T. and Ishii, T. and Kobayashi, T. and Nakadaira, T. and Nakamura, K. and Nishikawa, K. and Oyama, Y. and Sakashita, K. and Sekiguchi, T. and Tsukamoto, T. and Suzuki, A. T. and Takeuchi, Y. and Ieki, K. and Ikeda, M. and Kubo, H. and Minamino, A. and Murakami, A. and Nakaya, T. and Fukuda, Y. and Choi, K. and Itow, Y. and Mitsuka, G. and Miyake, M. and Mijakowski, P. and Hignight, J. and Imber, J. and Jung, C. K. and Taylor, I. and Yanagisawa, C. and Ishino, H. and Kibayashi, A. and Koshio, Y. and Mori, T. and Sakuda, M. and Takeuchi, J. and Kuno, Y. and Kim, S. B. and Okazawa, H. and Choi, Y. and Nishijima, K. and Koshiba, M. and Totsuka, Y. and Yokoyama, M. and Martens, K. and Marti, Ll. and Obayashi, Y. and Vagins, M. R. and Chen, S. and Sui, H. and Yang, Z. and Zhang, H. and Connolly, K. and Dziomba, M. and Wilkes, R. J.},
+  collaboration = {(Super-Kamiokande Collaboration)},
+  journal = {Phys. Rev. D},
+  volume = {90},
+  issue = {7},
+  pages = {072005},
+  numpages = {14},
+  year = {2014},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.90.072005},
+  url = {http://link.aps.org/doi/10.1103/PhysRevD.90.072005}
+}
+
 
 @article{PhysRevLett.102.141801,
   collaboration = {Super-Kamiokande},
