--- a/Theory.tex
+++ b/Theory.tex
@@ -70,11 +70,11 @@ Q \ket{\mathrm{fermion}} \, = \, Q \ket{\mathrm{boson}}, \hspace{20mm} Q \ket{\m
 \end{equation*}
 The supersymmetric fermionic and bosonic partner particles are called \textit{superpartner} and form together the irreducible representations of the supersymmetry algebra named \textit{supermultiplets} with the same number of fermionic and bosonic degrees of freedom. In case of unbroken supersymmetry, partner particles within one supermultiplet have the same mass as well as the same quantum numbers like electric charge, weak isospin and color degrees of freedom, except for the spin. Commonly, supersymmetric particles are denoted \textit{sparticles}. \\
 \\
-Furthermore, in a general supersymmetric theory fulfilling the criteria of gauge invariance and renormalisability, processes are allowed violating either the lepton or baryon number conservation. However, such a process has not been observed experimentally so far and would imply for instance a rapid decay of protons. The current lower limit on the proton lifetime is ... \todo{Quelle} and indicates that such processes must be suppressed. In order to achieve this, a new quantum number called \textit{R-parity} is introduced according to
+Furthermore, in a general supersymmetric theory fulfilling the criteria of gauge invariance and renormalisability, processes are allowed violating either the lepton or baryon number conservation. However, such a process has not been observed experimentally so far and would imply for instance a rapid decay of protons. The recent lower limit on the proton lifetime is found to be $5.9 \times 10^{33}$ years at 90\% confidence level~\cite{PhysRevD.90.072005} and indicates that such processes must be suppressed. In order to achieve this, a new quantum number called \textit{R-parity} is introduced according to  
 \begin{equation*}
 R = (-1)^{3(B-L) + 2S}
 \end{equation*}
-with baryon number $B$, lepton number $L$ and spin $S$. It is a multiplicative quantum number and amounts to $R= +1$ for SM particles while it is $R = -1$ for supersymmetric particles. Assuming R-parity conservation no baryon or lepton number violation processes occur \todo{Quelle RPV SUSY in Fussnote} ~\footnote{There exist also several R-parity violating SUSY models which are not in contradiction to the observed proton lifetime. However, these are not subject of this thesis and thus not discussed.}. In addition, the assumption of R-parity conservation leads to further phenomenological implications:
+with baryon number $B$, lepton number $L$ and spin $S$. It is a multiplicative quantum number and amounts to $R= +1$ for SM particles while it is $R = -1$ for supersymmetric particles. Assuming R-parity conservation no baryon or lepton number violation processes occur~\footnote{There exist also several R-parity violating SUSY models which are not in contradiction to the observed proton lifetime (\cf \eg~\cite{Martin:1997ns}) However, these are not subject of this thesis and thus not discussed.}. In addition, the assumption of R-parity conservation leads to further phenomenological implications:
 \begin{itemize}
 \item SUSY particles can only be produced in pairs at collider experiments as only even numbers of supersymmetric particles can occur in an interaction vertex.
 \item The lightest supersymmetric particle (LSP) is stable and thus any decay chain of a supersymmetric particle finally ends in a state containing an odd number of LSPs.
