--- a/Thesis.tex
+++ b/Thesis.tex
@@ -97,13 +97,13 @@ a4paper
     \thispagestyle{empty}
     \vspace*{1cm}
     \begin{doublespace} 
-       \textbf{\LARGE Probing natural supersymmetry} \\
+       \textbf{\Huge Probing natural supersymmetry} \\
        \vskip0.4cm
       % \textbf{\LARGE based on}
       % \vskip0.4cm
-       \textbf{\LARGE at the CMS experiment}
+       \textbf{\Huge at the CMS experiment}
        \vskip0.4cm
-       \textbf{\LARGE based on precise jet measurements}
+       \textbf{\Huge based on precise jet measurements}
 %      \textbf{\LARGE Measurement of the}\\
 %      \textbf{\LARGE Jet Transverse Momentum Resolution}\\
 %      \textbf{\LARGE and }\\
