--- a/Detector.tex
+++ b/Detector.tex
@@ -1,44 +1,45 @@
-In order to probe the various aspects of the well-established standard model or search for hints of new physics beyond the SM, experiments in particle physics preferentially make use of powerful particle accelerators. In these machines particles of a certain type are collided to examine the constituents of matter and interactions between them. The analyses presented in this thesis are performed in the context of the CMS experiment located at the Large Hadron Collider at CERN near Geneva which is the most powerful accelerator to date. \\ 
-The first part of this chapter provides an introduction to the LHC which is followed by an overview of the detector system of the CMS experiment. Afterwards the different periods of collision data taking at the LHC are discussed together with an introduction to the generation of simulated events which are needed for the analysis of real data events.  
+In order to probe the standard model or search for hints of new physics beyond the SM, experiments in particle physics often make use of powerful particle accelerators. In these machines, particles are collided to examine the constituents of matter and interactions between them. The analyses presented in this thesis are performed in the context of the CMS experiment located at the Large Hadron Collider at CERN near Geneva, which is the most powerful accelerator to date. \\ 
+The first section of this chapter provides an introduction to the LHC, which is followed by an overview of the detector system of the CMS experiment. Afterwards, the different periods of collision data taking at the LHC are discussed. This chapter concludes with an introduction to the generation of simulated events which are needed for the analysis of real data events.  
 \section{The Large Hadron Collider}
 \label{sec:lhc}
-The Large Hadron Collider~\cite{Bruning:782076, 1748-0221-3-08-S08001} is a ring-accelerator designed to provide particle collisions of hadrons. It is built in the tunnel of the former LEP~\cite{LEPdesign} collider 45 -- 170\,m below the ground and has a circumference of 26.7\,km. The LHC is a particle-particle collider and thus composed of two rings with counter-rotating beams. The operation can be performed in different modes with either proton beams or heavy ions like, \eg lead~\footnote{All studies presented in this thesis are based on proton-proton collisions. Thus, the operation with heavy ions is not discussed.}. \\
-In each beam, protons are grouped together in bunches and accelerated in two evacuated beam pipes using superconducting radio-frequency cavities. With a nominal bunch spacing of 25\,ns the bunch revolution frequency is 40\,MHz. Each of the 2808 individual bunches per beam contains at design conditions $1.15 \times 10^{11}$ protons. In order to bend the beams around the LHC ring superconducting dipole magnets are used at an operation temperature of 1.9\,K. They provide a magnetic field of up to 8.33\,T while additional quadrupole and sextupole magnets are utilized to squeeze and focus the beams.\\  
-Before the protons are injected into the LHC, they are already pre-accelerated in various smaller accelerators which are Linac2, the Proton Synchrotron Booster (PSB), the Proton Synchrotron (PS) and the Super Proton Synchrotron (SPS). With this injector chain, a beam energy of 450\gev is achieved. An overview of the accelerator complex at CERN is given in Fig.~\ref{fig:AccComplex}. \\
+The Large Hadron Collider~\cite{Bruning:782076, 1748-0221-3-08-S08001} is a ring accelerator designed to provide particle collisions of hadrons. It is built in the tunnel of the former LEP~\cite{LEPdesign} collider 45 -- 170\,m below the surface and has a circumference of 26.7\,km. The LHC is a particle-particle collider and composed of two rings with counter-rotating beams. It can be operated in different modes with either proton or heavy ion (\eg lead) beams.~\footnote{All studies presented in this thesis are based on proton-proton collisions. Thus, the operation with heavy ions is not discussed.} \\
+In each beam, protons are grouped together in bunches and accelerated in two evacuated beam pipes using superconducting radio-frequency cavities. With a nominal bunch spacing of 25\,ns, the collision frequency is 40\,MHz. Each of the 2808 individual bunches per beam contains $1.15 \times 10^{11}$ protons, at design conditions. In order to bend the beams around the LHC ring, superconducting dipole magnets are used at a temperature of 1.9\,K. They provide a magnetic field of up to 8.33\,T while additional quadrupole and sextupole magnets are utilized to squeeze and focus the beams.\\  
+Before the protons are injected into the LHC, they are already pre-accelerated in various smaller accelerators, which are namely: Linac2, the Proton Synchrotron Booster (PSB), the Proton Synchrotron (PS) and the Super Proton Synchrotron (SPS). With this injector chain, a beam energy of 450\gev is achieved. An overview of the accelerator complex at CERN is given in Fig.~\ref{fig:AccComplex}. 
 \begin{figure}[!tp]
-  \centering
+  \centering 
   \begin{tabular}{c}
     \includegraphics[width=0.9\textwidth]{figures/lhc.jpg}
   \end{tabular}
-  \caption{Illustration of the CERN accelerator complex including the injector chain of the LHC ring. Taken from~\cite{CERNaccelerators}.}
+  \caption{Illustration of the CERN accelerator complex including the injector chain of the LHC ring~\cite{CERNaccelerators}.}
   \label{fig:AccComplex}
 \end{figure}
-The main goal of the LHC is to provide proton-proton collisions to the experiments with center of mass energies up to 14\,TeV in order to explore physics processes at novel energy regimes. The expected number of events $N$ for a certain type of process is given by the product of the specific cross section $\sigma$ of that process and the integral $L = \int \mathcal{L}  \, dt$ of the instantaneous luminosity $\cal L$ over time such that
+\\
+The main goal of the LHC is to provide proton-proton (\pp) collisions to the experiments with centre of mass energies up to 14\tev in order to explore physics processes at novel energy regimes. The expected number of events $N$ for a certain process is given by the product of the cross section $\sigma$ of that process and the integral $L = \int \mathcal{L}  \, dt$ of the instantaneous luminosity $\cal L$ over time such that
 \begin{equation}
   N = \sigma \cdot L . 
   \label{eq:lumi}
 \end{equation}
 The luminosity is a machine parameter and can be expressed for beams with Gaussian-shaped profiles as  
 \begin{equation}
-  \mathcal{L} = \frac{f n_{1} n_{2}}{4 \pi \sigma_{x} \sigma{y}} \cdot F
+  \mathcal{L} = \frac{f n_{1} n_{2}}{4 \pi \sigma_{x} \sigma_{y}} \cdot F
   \label{eq:lumi}
 \end{equation}
-with the revolution frequency $f$, the number of particles $n_1$ and $n_2$ contained in the two colliding bunches and the transverse beam sizes $\sigma_{x}$ ($\sigma_{y}$) in the horizontal (vertical) directions. In order to take the inclination of the two beams into account, the geometrical correction factor $F$ is introduced. With design conditions, the nominal peak luminosity of the LHC is planned to be $10^{34} \, \mathrm{cm}^{-2} \, \mathrm{s}^{-1}$. Since the total inelastic proton-proton cross-section at a center of mass energy of 14\tev is around 100\,mb, as indicated in Fig.~\ref{fig:CrossSections}, the expected event rate is approximately $10^9$ events per second. \\
+with the collision frequency $f$, the number of particles $n_1$ and $n_2$ contained in the two colliding bunches and the transverse beam sizes $\sigma_{x}$ ($\sigma_{y}$) in the horizontal (vertical) direction. In order to take the inclination of the two beams into account, the geometrical correction factor $F$ is introduced. With design conditions, the nominal peak luminosity of the LHC is $10^{34} \, \mathrm{cm}^{-2} \, \mathrm{s}^{-1}$. Since the total inelastic proton-proton cross-section at a centre of mass energy of 14\tev is around 100\,mb, as indicated in Fig.~\ref{fig:CrossSections}, the expected event rate is approximately $10^9$ events per second. \\
 \begin{figure}[!tp]
   \centering
   \begin{tabular}{c}
     \includegraphics[width=0.60\textwidth]{figures/crosssections2012_v5-1.pdf}
   \end{tabular}
-  \caption{Summary of cross sections for various standard model processes in proton-proton and proton-antiproton collisions as function of the centre of mass energy. The right axis displays the correponding event rate at a luminosity of $\mathrm{10^{33}\,cm^{-2} s^{-1}}$. Taken from~\cite{bib:stirling:pcom}.}
+  \caption{Summary of cross sections for various standard model processes in proton-antiproton ($\sqrt{s} < 4$\tev) and proton-proton ($\sqrt{s} > 4$\tev) collisions as a function of the centre of mass energy. The right axis displays the correponding event rate at a luminosity of $\mathrm{10^{33}\,cm^{-2} s^{-1}}$~\cite{bib:stirling:pcom}.}
   \label{fig:CrossSections}
 \end{figure}
 \\
-The four main experiments are located at the four locations along the LHC ring where the beams cross in order to measure the delivered particle collisions. The two high luminosity experiments ATLAS~\cite{det::ATLAS} and CMS~\cite{Chatrchyan:2008zzk, bib:cmsptdr1} are designed for multiple purposes like precision measurements of SM quantities, search for the standard model Higgs Boson or searches for signals indicating new physics processes. The LHCb detector~\cite{det::LHCb} however is a specialised experiment focusing on the measurement of CP violation in the interactions of hadrons containing b-quarks. The only experiment designed especially for the analysis of heavy ion collisions is the ALICE~\cite{det::ALICE} detector with the main emphasis on the physics of strongly interacting matter at extreme energy densities like for instance quark-gluon plasma.
+The four main experiments are located at four of eight locations along the LHC ring where the beams cross and can be brought to collision. The two high luminosity experiments ATLAS~\cite{det::ATLAS} and CMS~\cite{Chatrchyan:2008zzk, bib:cmsptdr1} are designed for multiple purposes like precision measurements of SM quantities, search for the standard model Higgs Boson and searches for signals indicating new physics. The LHCb detector~\cite{det::LHCb}, however, is a specialised experiment and focuses on the measurement of CP violation in the interactions of hadrons containing b quarks. The only experiment especially designed for the analysis of heavy ion collisions is the ALICE~\cite{det::ALICE} detector with the main emphasis on the physics of strongly interacting matter at extreme energy densities, like quark-gluon plasma.
 
 \section{The CMS Experiment}
 \label{sec:cms}
-The CMS detector is one of the two experiments at the LHC designed to address a multitude of physics questions. In addition to tests of the SM at the TeV scale, studies of the nature of elektroweak symmetry breaking which might show up in the presence of a Higgs boson and searches for so far unknown particles pointing to \eg new symmetries in nature are the primary targets of these experiments. These ambitious physics goals can only be achieved by fully exploiting the provided collision energy and luminosity.\\
-The CMS detector with its typical cylindrical design of different sub-detector components around the beam line is designed to perfectly meet these particular conditions. A sketch of the CMS detector and the different sub-detectors is shown in Fig.~\ref{fig:CMS}.
+The CMS detector is one of the two general-purpose experiments at the LHC designed to address several physics questions. In addition to tests of the SM at the TeV scale, studies of the nature of elektroweak symmetry breaking which might show up in the presence of a Higgs boson and searches for so far unknown particles pointing to, \eg new symmetries in nature, are the primary targets of these experiments. These ambitious goals can only be achieved by fully exploiting the provided collision energy and luminosity with a suitable detector concept.\\
+The CMS detector with its typical cylindrical design of different sub-detector components around the beam line is designed to meet these requirements. A sketch of the CMS detector and the different sub-detectors is shown in Fig.~\ref{fig:CMS}.
 \begin{figure}[!tp]
   \centering
   \begin{tabular}{c}
@@ -47,24 +48,24 @@ The CMS detector with its typical cylindrical design of different sub-detector c
   \caption{A perspective view of the CMS detector~\cite{Chatrchyan:2008zzk}.}
   \label{fig:CMS}
 \end{figure}
-As a typical high-energy particle experiment, the CMS detector makes mainly use of tracking detectors and calorimeters to measure momenta of particles, energy depositions and flight directions in order to identify the objects emerging from the particle collisions. The CMS detector with a length of 21.6\,m and a diameter of 14.6\,m results in a total weight of 12500\,t. \\  
-The following sections comprise a description of the CMS detector and individual sub-detector components focusing on the detector parts most relevant for the analyses presented in this thesis. A detailed discussion of the detector design can be found in~\cite{Chatrchyan:2008zzk, bib:cmsptdr1}.
+As a typical high-energy particle experiment, the CMS detector makes mainly use of tracking detectors and calorimeters to measure momenta of particles, energy depositions and flight directions in order to identify the objects emerging from the particle collisions. The CMS detector with a length of 21.6\,m and a diameter of 14.6\,m exhibits a total weight of 12\,500\,t. \\  
+The following sections comprise a description of the CMS detector and individual sub-detectors. A detailed discussion of the detector design can be found in~\cite{Chatrchyan:2008zzk, bib:cmsptdr1}. After the introduction of the CMS coordinate conventions in Sec.~\ref{subsec:cms_coordinates}, the superconducting magnet is discussed (Sec.~\ref{subsec:cms_magnet}). Afterwards, the tracking system (Sec.~\ref{subsec:cms_tracker}), the calorimeters (Sec.~\ref{subsec:cms_ecal} and~\ref{subsec:cms_hcal}) and the muon system (Sec.~\ref{subsec:cms_muon}) are described moving from the inside of the detector outwards. The detector description ends with a short review of the trigger system in Sec.~\ref{subsec:cms_trigger}.  
 
 \subsection{Coordinate Conventions and Kinematic Variables}
 \label{subsec:cms_coordinates}
-In order to describe the particle collisions, the CMS experiment makes use of a right-handed coordinate system with its origin at the center of the detector at the nominal interaction point. While the z-axis is defined along the direction of the beam, the x-axis points to the center of the LHC ring and the y-axis vertically upwards. In this xy-plane the azimuthal angle $\phi$ is measured where $\phi = 0$ coincides with the x-axis. The polar angle $\theta$ however is defined with respect to the z-axis. A quantity closely related to the polar angle is the pseudorapidity $\eta$ defined as
+In order to describe the particle collisions, the CMS experiment makes use of a right-handed coordinate system with its origin at the centre of the detector at the nominal interaction point. While the $z$-axis is defined along the direction of the anti-clockwise beam, the $x$-axis points to the center of the LHC ring and the $y$-axis vertically upwards. In this $xy$-plane the azimuthal angle $\phi$ is measured where $\phi = 0$ coincides with the x-axis. The polar angle $\theta$ is defined with respect to the positive $z$-axis. A quantity closely related to the polar angle is the pseudorapidity $\eta$ defined as
 \begin{equation}
 \eta = \mathrm{-ln} \left[\mathrm{tan} \left(\frac{\theta}{2} \right)\right]
 \end{equation}
-which is widely used in experimental particle physics, since it is a Lorentz invariant quantity. A pseudorapidity $\eta = 0$ corresponds to the direction perpendicular to the beam while $|\eta| \rightarrow \infty$ points along the beam. Based on the pseudorapidity, the Lorentz invariant distance between two objects $\Delta$R can be written as
+which is widely used in experimental particle physics. A pseudorapidity $\eta = 0$ corresponds to the direction perpendicular to the beam while $|\eta| \rightarrow \infty$ points along the beams. Based on the pseudorapidity, the distance between two objects $\Delta R$, which is invariant under Lorentz boosts in $z$-direction, can be written as
 \begin{equation}
-\Delta \mathrm{R} = \sqrt{(\Delta \eta)^2 + (\Delta \phi)^2} \, .
+\Delta R = \sqrt{(\Delta \eta)^2 + (\Delta \phi)^2} \, .
 \end{equation}
-At the LHC the initial conditions of the primary collisions are not known, as the specific energy fraction of the proton which each parton carries can not be identified. Thus, conservation of the total momentum can not be utilized directly to describe the momentum balance in the final state. However, it is known that the initial particles have no significant momentum orthogonal to the beam axis which is referred to as transverse momentum 
+At the LHC, the initial conditions of the primary collisions are not known, as the specific energy fraction of the proton which each parton carries can not be identified. Thus, conservation of the total momentum can not be utilized directly to describe the momentum balance in the final state. However, it is known that the initial particles have no significant momentum orthogonal to the beam axis which is referred to as \textit{transverse momentum}. Consequently, the transverse momentum is defined as 
 \begin{equation}
-\pt = p \cdot \mathrm{sin}(\theta) \, .
+\pt = \sqrt{p_x^2 + p_y^2} 
 \end{equation}
-Thus, momentum conservation in the transverse plane is used to describe the final state conditions. Any difference between the total sum of all transverse momenta and zero is considered as missing energy \met and often exploited to describe undetected particles.
+and momentum conservation in the transverse plane is then used to describe the final state conditions. Hence, the vector momentum imbalance in the transverse plane (\metvec) is determined as the negative vector sum of the momenta of all particles. The absolute value of the vector momentum imbalance \met is typically termed \textit{missing transverse momentum} or \textit{missing transverse energy} and often exploited to describe undetected particles.
 
 \subsection{Superconducting Magnet}
 \label{subsec:cms_magnet}
@@ -89,7 +90,6 @@ In order to fulfill these tasks, the CMS experiment makes use of a tracker desig
 \end{description}
 The tracking system with the design described above provides a very good impact parameter resolution and tracking efficiency~\cite{bib:cmstdr:tracker}. The impact parameter resolution is of the order of $<$ 35\,$\mu$m in the plane perpendicular to the beam (for particles with \pt $>$ 10\,GeV) and reaches 75\,$\mu$m in the longitudinal direction. Furthermore, the track reconstruction efficiency of high energetic electrons is above 90\%, that of charged hadrons up to 95\% (for \pt $>$ 10\,GeV) and that for muons even better than 98\% in the whole covered region up to $|\eta| = 2.5$ \footnote{This is achieved already for muons with very low transverse momenta around 1\,GeV.}. Altogether, the relative transverse momentum resolution reaches a level of 1-2\% for high momentum tracks ($\approx$ 100\,GeV) in the central barrel for $|\eta| < 1.6$.
  
-
 \subsection{Electromagnetic Calorimeter}
 \label{subsec:cms_ecal}
 The CMS experiment makes use of a homogeneous electromagnetic calorimeter (ECAL), in order to precisely measure the energy deposits of electrons and photons. It is installed around the inner tracking system covering a range up to $|\eta| = 3.0$ and consists of lead tungstate (PbW$\mathrm{O}_4$) crystals. These have been chosen as they provide a high density, short radiation length and a small Moli\`{e}re radius and hence allow to build a compact calorimeter with a fine granularity. As 80\% of the scintillation light is emitted within 25\,ns, this matches well the bunch crossing rate of the LHC machine. In order to collect the radiated light, photodiodes are glued to the back of each crystal. \\
