--- a/definitions.tex
+++ b/definitions.tex
@@ -234,6 +234,7 @@
 \newcommand{\ZJet}{\ensuremath{Z+\text{jet}}\xspace}
 \newcommand{\ZJets}{\ensuremath{Z+\text{jets}}\xspace}
 \newcommand{\photonZJet}{\ensuremath{\text{photon}/Z+\text{jet}}\xspace}
+\newcommand{\pp}{\ensuremath{pp}}
 
 % Programmes
 \newcommand{\isajet}{\textsc{IsaJet}\xspace}
