--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2930,6 +2930,20 @@ author = "S. Brandt and Ch. Peyrou and R. Sosnowski and A. Wroblewski"
       SLACcitation   = "%%CITATION = HEP-PH/0512210;%%",
 }
 
+@article{Cacciari2008119,
+title = "Pileup subtraction using jet areas ",
+journal = "Physics Letters B ",
+volume = "659",
+number = "1-2",
+pages = "119 - 126",
+year = "2008",
+note = "",
+issn = "0370-2693",
+doi = "http://dx.doi.org/10.1016/j.physletb.2007.09.077",
+url = "http://www.sciencedirect.com/science/article/pii/S0370269307011094",
+author = "Matteo Cacciari and Gavin P. Salam"
+}
+
 @article{CMS-PAS-JME-09-002,
   collaboration = {CMS},
   title         = {The Jet Plus Tracks Algorithm for Calorimeter Jet Energy Corrections in CMS},
