--- a/definitions.tex
+++ b/definitions.tex
@@ -234,7 +234,7 @@
 \newcommand{\ZJet}{\ensuremath{Z+\text{jet}}\xspace}
 \newcommand{\ZJets}{\ensuremath{Z+\text{jets}}\xspace}
 \newcommand{\photonZJet}{\ensuremath{\text{photon}/Z+\text{jet}}\xspace}
-\newcommand{\pp}{\ensuremath{pp}}
+\newcommand{\pp}{\ensuremath{pp}\xspace}
 
 % Programmes
 \newcommand{\isajet}{\textsc{IsaJet}\xspace}
